<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trás la Armadura Sagrada</string>
    <string name="jugar">Jugar</string>
    <string name="pegaso">Pegaso</string>
    <string name="dragon">Dragon</string>
    <string name="opciones">Opciones</string>
    <string name="discreto">Discreto</string>
    <string name="continuo">Continuo</string>
    <string name="caballero">Caballero:</string>
    <string name="modoMovimiento">Modo de movimiento:</string>
    <string name="caballeroPreferencias">Caballero Pegaso/Dragon:</string>
    <string name="modoMovimientoPreferencias">Movimiento discreto/continuo:</string>
    <string name="valoresOpcionesDefecto">Valores de opciones por defecto:</string>

</resources>